# lobotomizer

./: .gitignore  README.md  pyproject.toml  real_model_tests.md  test_real_models.py
.github/workflows/: publish.yml
design/: kd_integration.md
examples/: README.md  bert_quantize.py  cross_model_distill.py  distill_after_prune.py  mobilevit_compress.py  precomputed_distill.py  resnet50_edge.py  whisper_compress.py  yolo_edge.py
src/lobotomizer/: __init__.py  cli.py
src/lobotomizer/bench/: __init__.py  compare.py  profiler.py
src/lobotomizer/core/: __init__.py  pipeline.py  profile.py  recipe.py  registry.py  result.py
src/lobotomizer/export/: __init__.py  onnx.py
src/lobotomizer/recipes/: aggressive.yaml  balanced.yaml
src/lobotomizer/stages/: __init__.py  adapters.py  base.py  distill.py  distill_losses.py  hooks.py  low_rank.py  prune.py  quantize.py  structured_prune.py
tests/: conftest.py  test_cli.py  test_core.py  test_distill.py  test_distill_real.py  test_export.py  test_low_rank.py  test_onnx_export.py  test_quantize_methods.py  test_stages.py  test_structured_prune.py
