[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobotomizer"
version = "0.1.0"
description = "Composable model compression for PyTorch — prune, quantize, and ship."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Usman"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/usman/lobotomizer"
Repository = "https://github.com/usman/lobotomizer"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock"]
test-all = ["transformers", "openai-whisper", "ultralytics", "timm"]
all = ["torch-pruning", "bitsandbytes", "torchprofile"]

[project.scripts]
lobotomize = "lobotomizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
